@@ -29,8 +29,10 @@ fortune-mod (9708-29) unstable; urgency=low
     (closes: #157105)
   * datfiles/off/unrotated/limericks:5053: Removed a broken limeric.
     (closes: #171114)
+  * fortune/fortune.c: New option: -c. Used to name the file from which the
+    cookie came.
+    (closes: #109167)
     
-
  -- Pascal Hakim <pasc@debian.org>  Sat, 14 Jun 2003 01:10:10 +1000
 
 fortune-mod (9708-28) unstable; urgency=low
